added abstract Plugin class. quick changes.